# data-platform-boilerplate

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: cursor-rules-location.mdc
Infrastructure_docker/: compose.yaml
Infrastructure_docker/delta/: Dockerfile
Infrastructure_docker/iceberg/: Dockerfile
Infrastructure_docker/pyspark/: Dockerfile  spark-defaults.conf
Infrastructure_docker/ray/: Dockerfile
Infrastructure_docker/unity_catalog_open_source/: Dockerfile  compose.yaml
databricks_utils/dabs_generator/python_project_template/: databricks_template_schema.json
databricks_utils/dabs_generator/python_project_template/template/: update_layout.tmpl
databricks_utils/dabs_generator/python_project_template/template/{{ template `root_dir` .}}/: README.md.tmpl  pyproject.toml.tmpl
databricks_utils/dabs_generator/python_project_template/template/{{ template `root_dir` .}}/{{ .input_python_package_name }}/: BUILD.bazel.tmpl  databricks.yml.tmpl  variables.bzl.tmpl
libraries/client/: pyproject.toml
libraries/connection/data_platform/connection/: __init__.py
libraries/ingestion/: pyproject.toml
libraries/interfaces/: pyproject.toml
libraries/transformations/: pyproject.toml
libraries/transformations/src/transformations/: __init__.py
libs/client/: pyproject.toml
libs/connection/: pyproject.toml
libs/ingestion/: pyproject.toml
libs/ingestion/data_platform/ingestion/: __init__.py
libs/interfaces/: pyproject.toml
libs/transformations/: pyproject.toml
projects_data_engineering/x_domain/albatros/: pyproject.toml
projects_data_engineering/x_domain/albatros/data_platform/albatros/: __init__.py
projects_data_engineering/x_domain/albatross/: pyproject.toml
projects_data_engineering/x_domain/albatross/src/albatross/: __init__.py
