
[project]
name = "data_platform"
version = "0.0.0"
requires-python = "~=3.11"
dependencies = []

[tool.uv]
package = false
[tool.uv.workspace]
members = ["projects_data_engineering/x_domain/albatros", "libs/client"]
[tool.una]
namespace = "data_platform"
requires-python = "~=3.11"

[dependency-groups]
dev = [
    "ruff==0.6.9",
    "polars~=1.12.0",
    "pre-commit~=4.0.1",
    "pyright>=1.1.391",
    "una>=0.5.2",
]
[tool.pyright]
venvPath = "."       # uv installs the venv in the current dir
venv = ".venv"       #       in a folder called `.venv`
strict = ["**/*.py"] # use 'strict' checking on all files
[tool.ruff]
fix = true
show-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebooks",
    "*.ipynb",
]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true
[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["I", "E", "F", "B"]
preview = true
[tool.pytest.ini_options]
pythonpath = ["projects_data_engineering/*", "libs/*"]
testpaths = ["projects_data_engineering/*", "libs/*"]
addopts = ""
extend-select = [

    # "PLC0103",  # invalid-name
    # "PLC0104",  # disallowed-name
    # "PLC0113",  # unneeded-not
    # "PLC0121",  # singleton-comparison
    # "PLC0122",  # misplaced-comparison-constant
    # "PLC0123",  # unidiomatic-typecheck
    "PLC2401", # non-ascii-name
    # "PLC0200",  # consider-using-enumerate
    # "PLC0201",  # consider-iterating-dictionary
    # "PLC0202",  # bad-classmethod-argument
    # "PLC0203",  # bad-mcs-method-argument
    # "PLC0204",  # bad-mcs-classmethod-argument
    # "PLC0205",  # single-string-used-for-slots
    # "PLC0206",  # consider-using-dict-items
    # "PLC0207",  # use-maxsplit-arg
    # "PLC0208",  # use-sequence-for-iteration
    # "E501", # line-too-long
    # "PLC0302",  # too-many-lines
    "W291", # trailing-whitespace
    # "PLC0304",  # missing-final-newline
    # "PLC0305",  # trailing-newlines
    # "PLC0321",  # multiple-statements
    # "PLC0325",  # superfluous-parens
    # "PLC0327",  # mixed-line-endings
    # "PLC0328",  # unexpected-line-ending-format
    # "PLC0401",  # wrong-spelling-in-comment
    # "PLC0402",  # wrong-spelling-in-docstring
    # "PLC0403",  # invalid-characters-in-docstring
    # "PLC0410",  # multiple-imports
    # "PLC0412",  # ungrouped-imports
    # "PLC0413",  # wrong-import-position
    # "PLC0414", # useless-import-alias
    # "PLC0415",  # import-outside-toplevel
    # "PLC1801",  # len-as-condition
    # "PLE0011",  # unrecognized-inline-option
    # "PLE0012",  # bad-option-value
    # "PLE0013",  # bad-plugin-value
    # "PLE0100",  # init-is-generator
    "PLE0101", # return-in-init
    # "PLE0102",  # function-redefined
    # "PLE0103",  # not-in-loop
    "F706", # return-outside-function
    "F704", # yield-outside-function
    # "PLE0107",  # nonexistent-operator
    # "PLE0108",  # duplicate-argument-name
    # "PLE0110",  # abstract-class-instantiated
    # "PLE0111",  # bad-reversed-sequence
    # "PLE0112",  # too-many-star-expressions
    # "PLE0113",  # invalid-star-assignment-target
    # "PLE0114",  # star-needs-assignment-target
    "PLE0115", # nonlocal-and-global
    "PLE0117", # nonlocal-without-binding
    # "PLE0118",  # used-prior-global-declaration
    # "PLE0119",  # misplaced-format-function
    # "PLE0202",  # method-hidden
    # "PLE0203",  # access-member-before-definition
    # "PLE0211",  # no-method-argument
    # "PLE0213",  # no-self-argument
    # "PLE0236",  # invalid-slots-object
    # "PLE0237",  # assigning-non-slot
    # "PLE0238",  # invalid-slots
    # "PLE0239",  # inherit-non-class
    # "PLE0240",  # inconsistent-mro
    "PLE0241", # duplicate-bases
    # "PLE0242",  # class-variable-slots-conflict
    # "PLE0243",  # invalid-class-object
    # "PLE0301",  # non-iterator-returned
    "PLE0302", # unexpected-special-method-signature
    # "PLE0303",  # invalid-length-returned
    # "PLE0304",  # invalid-bool-returned
    # "PLE0305",  # invalid-index-returned
    # "PLE0306",  # invalid-repr-returned
    # "PLE0307",  # invalid-str-returned
    # "PLE0308",  # invalid-bytes-returned
    # "PLE0309",  # invalid-hash-returned
    # "PLE0310",  # invalid-length-hint-returned
    # "PLE0311",  # invalid-format-returned
    # "PLE0312",  # invalid-getnewargs-returned
    # "PLE0313",  # invalid-getnewargs-ex-returned
    # "PLE0601",  # used-before-assignment
    # "PLE0602",  # undefined-variable
    # "PLE0603",  # undefined-all-variable
    "PLE0604", # invalid-all-object
    "PLE0605", # invalid-all-format
    # "PLE0611",  # no-name-in-module
    # "PLE0633",  # unpacking-non-sequence
    # "PLE0701",  # bad-except-order
    # "PLE0702",  # raising-bad-type
    # "PLE0703",  # bad-exception-context
    "PLE0704", # misplaced-bare-raise
    # "PLE0710",  # raising-non-exception
    # "PLE0711",  # notimplemented-raised
    # "PLE0712",  # catching-non-exception
    # "PLE1003",  # bad-super-call
    # "PLE1101",  # no-member
    # "PLE1102",  # not-callable
    # "PLE1111",  # assignment-from-no-return
    # "PLE1120",  # no-value-for-parameter
    # "PLE1121",  # too-many-function-args
    # "PLE1123",  # unexpected-keyword-arg
    # "PLE1124",  # redundant-keyword-arg
    # "PLE1125",  # missing-kwoa
    # "PLE1126",  # invalid-sequence-index
    # "PLE1127",  # invalid-slice-index
    # "PLE1128",  # assignment-from-none
    # "PLE1129",  # not-context-manager
    # "PLE1130",  # invalid-unary-operand-type
    # "PLE1131",  # unsupported-binary-operation
    # "PLE1132",  # repeated-keyword
    # "PLE1133",  # not-an-iterable
    # "PLE1134",  # not-a-mapping
    # "PLE1135",  # unsupported-membership-test
    # "PLE1136",  # unsubscriptable-object
    # "PLE1137",  # unsupported-assignment-operation
    # "PLE1138",  # unsupported-delete-operation
    # "PLE1139",  # invalid-metaclass
    # "PLE1140",  # unhashable-dict-key
    "PLE1141", # dict-iter-missing-items
    "PLE1142", # await-outside-async
    # "PLE1200",  # logging-unsupported-format
    # "PLE1201",  # logging-format-truncated
    "PLE1205", # logging-too-many-args
    "PLE1206", # logging-too-few-args
    # "PLE1300",  # bad-format-character
    # "PLE1301",  # truncated-format-string
    # "PLE1302",  # mixed-format-string
    # "PLE1303",  # format-needs-mapping
    # "PLE1304",  # missing-format-string-key
    # "PLE1305",  # too-many-format-args
    # "PLE1306",  # too-few-format-args
    "PLE1307", # bad-string-format-type
    "PLE1310", # bad-str-strip-call
    "PLE1507", # invalid-envvar-value
    # "PLE1700",  # yield-inside-async-function
    # "PLE1701",  # not-async-context-manager
    # "PLF0001",  # fatal
    # "PLF0002",  # astroid-error
    # "PLF0010",  # parse-error
    # "PLF0202",  # method-check-failed
    # "PLI1101",  # c-extension-no-member
    # "PLR0123",  # literal-comparison
    "PLR0124", # comparison-with-itself
    "PLR6301", # no-self-use
    "PLR0202", # no-classmethod-decorator
    "PLR0203", # no-staticmethod-decorator
    "UP004",   # useless-object-inheritance
    "PLR0206", # property-with-parameters
    # "PLR0401",  # cyclic-import
    # "PLR0402",  # consider-using-from-import
    # "PLR0801",  # duplicate-code
    # "PLR0901",  # too-many-ancestors
    # "PLR0902",  # too-many-instance-attributes
    # "PLR0903",  # too-few-public-methods
    "PLR0904", # too-many-public-methods
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    # "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR0916", # too-many-boolean-expressions
    # "PLR1260",  # too-complex
    # "PLR1701",  # consider-merging-isinstance
    "PLR1702", # too-many-nested-blocks
    # "PLR1703",  # simplifiable-if-statement
    "PLR1704", # redefined-argument-from-local
    # "PLR1705",  # no-else-return
    # "PLR1706",  # consider-using-ternary
    # "PLR1707",  # trailing-comma-tuple
    # "PLR1708",  # stop-iteration-return
    # "PLR1709",  # simplify-boolean-expression
    # "PLR1710",  # inconsistent-return-statements
    "PLR1711", # useless-return
    # "PLR1712",  # consider-swap-variables
    # "PLR1713",  # consider-using-join
    # "PLR1714",  # consider-using-in
    # "PLR1715",  # consider-using-get
    # "PLR1716",  # chained-comparison
    # "PLR1717",  # consider-using-dict-comprehension
    # "PLR1718",  # consider-using-set-comprehension
    # "PLR1719",  # simplifiable-if-expression
    # "PLR1720",  # no-else-raise
    # "C416", # unnecessary-comprehension pair
    # "PLR1722",  # consider-using-sys-exit
    # "PLR1723",  # no-else-break
    # "PLR1724",  # no-else-continue
    # "PLR1725",  # super-with-arguments
    # "PLR1726",  # simplifiable-condition
    # "PLR1727",  # condition-evals-to-constant
    # "PLR1728",  # consider-using-generator
    # "PLR1729",  # use-a-generator
    # "PLR1730",  # consider-using-min-builtin
    # "PLR1731",  # consider-using-max-builtin
    # "PLR1732",  # consider-using-with
    "PLR1733", # unnecessary-dict-index-lookup
    # "PLR1734",  # use-list-literal
    # "PLR1735",  # use-dict-literal
    # "PLW0101",  # unreachable
    # "PLW0102",  # dangerous-default-value
    # "PLW0104",  # pointless-statement
    # "PLW0105",  # pointless-string-statement
    # "PLW0106",  # expression-not-assigned
    # "PLW0107",  # unnecessary-pass
    # "PLW0108", # unnecessary-lambda
    # "PLW0109",  # duplicate-key
    # "PLW0111",  # assign-to-new-keyword
    "PLW0120", # useless-else-on-loop
    # "PLW0122",  # exec-used
    # "PLW0123",  # eval-used
    # "PLW0124",  # confusing-with-statement
    # "PLW0125",  # using-constant-test
    # "PLW0126",  # missing-parentheses-for-call-in-test
    "PLW0127", # self-assigning-variable
    "PLW0128", # redeclared-assigned-name
    "PLW0129", # assert-on-string-literal
    # "PLW0143",  # comparison-with-callable
    # "PLW0150",  # lost-exception
    "PLW0177", # nan-comparison
    # "PLW0199",  # assert-on-tuple
    # "PLW0201",  # attribute-defined-outside-init
    "PLW0211", # bad-staticmethod-argument
    # "PLW0212",  # protected-access
    # "PLW0221",  # arguments-differ
    # "PLW0222",  # signature-differs
    # "PLW0223",  # abstract-method
    # "PLW0231",  # super-init-not-called
    # "PLW0232",  # no-init
    # "PLW0233",  # non-parent-init-called
    # "PLW0235",  # useless-super-delegation
    # "PLW0236",  # invalid-overridden-method
    # "PLW0237",  # arguments-renamed
    # "PLW0238",  # unused-private-member
    # "PLW0301",  # unnecessary-semicolon
    # "PLW0311",  # bad-indentation
    # "PLW0401",  # wildcard-import
    # "PLW0402",  # deprecated-module
    # "PLW0404",  # reimported
    "PLW0406", # import-self
    # "PLW0407",  # preferred-module
    # "PLW0410",  # misplaced-future
    # "PLW0511",  # fixme
    # "PLW0601",  # global-variable-undefined
    "PLW0602", # global-variable-not-assigned
    "PLW0603", # global-statement
    "PLW0604", # global-at-module-level
    "F401",    # unused-import
    "F841",    # unused-variable
    # "PLW0613",  # unused-argument
    # "PLW0614",  # unused-wildcard-import
    # "PLW0621",  # redefined-outer-name
    # "PLW0622",  # redefined-builtin
    # "PLW0631",  # undefined-loop-variable
    # "PLW0632",  # unbalanced-tuple-unpacking
    # "PLW0640",  # cell-var-from-loop
    # "PLW0641",  # possibly-unused-variable
    # "PLW0642",  # self-cls-assignment
    "E722", # bare-except
    # "PLW0703",  # broad-except
    # "PLW0705",  # duplicate-except
    # "PLW0706",  # try-except-raise
    # "PLW0707",  # raise-missing-from
    "PLW0711", # binary-op-exception
    # "PLW0715",  # raising-format-tuple
    # "PLW0716",  # wrong-exception-operation
    # "PLW1113",  # keyword-arg-before-vararg
    # "PLW1114",  # arguments-out-of-order
    # "PLW1115",  # non-str-assignment-to-dunder-name
    # "PLW1116",  # isinstance-second-argument-not-valid-type
    # "PLW1201",  # logging-not-lazy
    # "PLW1202",  # logging-format-interpolation
    # "PLW1300",  # bad-format-string-key
    # "PLW1301",  # unused-format-string-key
    # "PLW1302",  # bad-format-string
    # "PLW1303",  # missing-format-argument-key
    # "PLW1304",  # unused-format-string-argument
    # "PLW1305",  # format-combined-specification
    # "PLW1306",  # missing-format-attribute
    # "PLW1307",  # invalid-format-index
    # "PLW1308",  # duplicate-string-formatting-argument
    # "PLW1309",  # f-string-without-interpolation
    # "PLW1310",  # format-string-without-interpolation
    # "PLW1401",  # anomalous-backslash-in-string
    # "PLW1402",  # anomalous-unicode-escape-in-string
    # "PLW1404",  # implicit-str-concat
    # "PLW1405",  # inconsistent-quotes
    # "PLW1406",  # redundant-u-string-prefix
    "PLW1501", # bad-open-mode
    # "PLW1503",  # redundant-unittest-assert
    # "PLW1505",  # deprecated-method
    # "PLW1506",  # bad-thread-instantiation
    # "PLW1507",  # shallow-copy-environ
    "PLW1508", # invalid-envvar-default
    "PLW1509", # subprocess-popen-preexec-fn
    # "PLW1510",  # subprocess-run-check
    # "PLW1511",  # deprecated-argument
    # "PLW1512",  # deprecated-class
    # "PLW1513",  # deprecated-decorator
    "PLW1514", # unspecified-encoding
    # "PLW1515",  # forgotten-debug-statement
]

ignore = [
    "E712",    #true-false-comparison
    "E501",    #line-too-long seems excessive since the format does what it can
    "PLW1514", #unspecified-encoding
    "PD011",   #pandas-use-of-dot-values
    "PD901",   #pandas-df-variable-name
    "E731",    # lambda-assignment
    "E722",    # bare-except
    "E402",    # module-level-import
    "PLW0108", # unnecessary-lambda pair
    # "PLC0114",  # missing-module-docstring
    # "PLC0115",  # missing-class-docstring
    # "PLC0116",  # missing-function-docstring
    # "PLC0411",  # wrong-import-order
    # "PLE0401",  # import-error
    # "PLE0402",  # relative-beyond-top-level
    # "PLE1601",  # print-statement
    # "PLE1602",  # parameter-unpacking
    # "PLE1603",  # unpacking-in-except
    # "PLE1604",  # old-raise-syntax
    # "PLE1605",  # backtick
    # "PLI0001",  # raw-checker-failed
    # "PLI0010",  # bad-inline-option
    # "PLI0011",  # locally-disabled
    # "PLI0013",  # file-ignored
    # "PLI0020",  # suppressed-message
    # "PLI0021",  # useless-suppression
    # "PLI0022",  # deprecated-pragma
    # "PLI0023",  # use-symbolic-message-instead
    "PLR0914", # too-many-locals
    # "PLW1203",  # logging-fstring-interpolation
    # "PLW1601",  # apply-builtin
    # "PLW1602",  # basestring-builtin
    # "PLW1603",  # buffer-builtin
    # "PLW1604",  # cmp-builtin
    # "PLW1605",  # coerce-builtin
    # "PLW1606",  # execfile-builtin
    # "PLW1607",  # file-builtin
    # "PLW1608",  # long-builtin
    # "PLW1609",  # raw_input-builtin
    # "PLW1610",  # reduce-builtin
    # "PLW1611",  # standarderror-builtin
    # "PLW1612",  # unicode-builtin
    # "PLW1613",  # xrange-builtin
    # "PLW1614",  # coerce-method
    # "PLW1615",  # delslice-method
    # "PLW1616",  # getslice-method
    # "PLW1617",  # setslice-method
    # "PLW1618",  # no-absolute-import
    # "PLW1619",  # old-division
    # "PLW1620",  # dict-iter-method
    # "PLW1621",  # dict-view-method
    # "PLW1622",  # next-method-called
    # "PLW1623",  # metaclass-assignment
    # "PLW1624",  # indexing-exception
    # "PLW1625",  # raising-string
    # "PLW1626",  # reload-builtin
    # "PLW1627",  # oct-method
    # "PLW1628",  # hex-method
    # "PLW1629",  # nonzero-method
    # "PLW1630",  # cmp-method
    # "PLW1632",  # input-builtin
    # "PLW1633",  # round-builtin
    # "PLW1634",  # intern-builtin
    # "PLW1635",  # unichr-builtin
    # "PLW1636",  # map-builtin-not-iterating
    # "PLW1637",  # zip-builtin-not-iterating
    # "PLW1638",  # range-builtin-not-iterating
    # "PLW1639",  # filter-builtin-not-iterating
    # "PLW1640",  # using-cmp-argument
    "PLW1641", # eq-without-hash
    # "PLW1642",  # div-method
    # "PLW1643",  # idiv-method
    # "PLW1644",  # rdiv-method
    # "PLW1645",  # exception-message-attribute
    # "PLW1646",  # invalid-str-codec
    # "PLW1647",  # sys-max-int
    # "PLW1648",  # bad-python3-import
    # "PLW1649",  # deprecated-string-function
    # "PLW1650",  # deprecated-str-translate-call
    # "PLW1651",  # deprecated-itertools-function
    # "PLW1652",  # deprecated-types-field
    # "PLW1653",  # next-method-defined
    # "PLW1654",  # dict-items-not-iterating
    # "PLW1655",  # dict-keys-not-iterating
    # "PLW1656",  # dict-values-not-iterating
    # "PLW1657",  # deprecated-operator-function
    # "PLW1658",  # deprecated-urllib-function
    # "PLW1659",  # xreadlines-attribute
    # "PLW1660",  # deprecated-sys-function
    # "PLW1661",  # exception-escape
    # "PLW1662",  # comprehension-escape
]
