
[project]
name = "data_platform"
version = "0.0.0"
requires-python = "~=3.11"
dependencies = []

[tool.uv]
package = false
[tool.uv.workspace]
members = ["projects_data_engineering/x_domain/*", "libs/*"]
[tool.una]
namespace = "data_platform"
requires-python = "~=3.11"

[dependency-groups]
dev = [
    "ruff==0.6.9",
    "polars~=1.12.0",
    "pre-commit~=4.0.1",
    "pyright>=1.1.391",
    "una~=0.6.1",
    "basedpyright>=1.28.1",
]

[tool.basedpyright]
include = ["**/*.py"]
typeCheckingMode = "basic"
[tool.ruff]
fix = true
show-fixes = true
line-length = 80
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["I", "E4", "E7", "E9", "F", "B"]
preview = true

[tool.pytest.ini_options]
pythonpath = ["projects_data_engineering/*", "libs/*"]
testpaths = ["projects_data_engineering/*", "libs/*"]
addopts = ""
