[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jcompte", email = "jcompte@inspirato.com" }
]
requires-python = ">=3.11, <4"
dependencies = [
    "requests>=2.32.3",
]
dynamic = ["una"]  # needed for hatch-una metadata hook to work

[tool.uv]
package = true
[build-system]
requires = ["hatchling", "hatch-una"]
build-backend = "hatchling.build"

[tool.hatch.build.target.wheel]
packages = ["data_platform"]
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.hooks.una-build]
[tool.hatch.metadata.hooks.una-meta]
[tool.pyright]
venvPath = "."          # uv installs the venv in the current dir
venv = ".venv"          #       in a folder called `.venv`
strict = ["**/*.py"]    # use 'strict' checking on all files