[project]
name = "transformations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jcompte", email = "jcompte@inspirato.com" }
]
requires-python = ">=3.11, <4"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.pyright]
venvPath = "."          # uv installs the venv in the current dir
venv = ".venv"          #       in a folder called `.venv`
strict = ["**/*.py"]    # use 'strict' checking on all files
[tool.hatch.build.target.wheel]
packages = ["data_platform"]
