[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "jcompte", email = "jcompte@inspirato.com" }]
requires-python = ">=3.11, <4"
dependencies = [
    "requests>=2.32.3",
]
dynamic = ["una"]                                                 # needed for hatch-una metadata hook to work

[build-system]
requires = ["hatchling", "hatch-una"]
build-backend = "hatchling.build"

[dependency-groups]
dev=[]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.una-build]
[tool.hatch.metadata.hooks.una-meta]

[tool.uv.sources]